--- a/environment.yml
+++ b/environment.yml
@@ -15,8 +15,10 @@ dependencies:
   - brotli-bin=1.0.9=hb7f2c08_8
   - brotlipy=0.7.0=py310h90acd4f_1005
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.10.11=hecd8cb5_0
-  - certifi=2022.12.7=py310hecd8cb5_0
+  - ca-certificates=2022.12.7=h033912b_0
+  - cairo=1.16.0=h0ab9d94_1001
+  - catboost=1.1.1=py310h2ec42d9_1
+  - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py310ha78151a_3
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
@@ -28,9 +30,26 @@ dependencies:
   - decorator=5.1.1=pyhd8ed1ab_0
   - entrypoints=0.4=pyhd8ed1ab_0
   - executing=1.2.0=pyhd8ed1ab_0
+  - expat=2.5.0=hf0c8a7f_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.13.94=h10f422b_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
   - fonttools=4.38.0=py310h90acd4f_1
   - freetype=2.12.1=hd8bbffd_0
+  - fribidi=1.0.10=hbcb3906_0
+  - gdk-pixbuf=2.42.8=h90ff1d3_1
+  - gettext=0.21.1=h8a4c099_0
   - giflib=5.2.1=hbcb3906_2
+  - glib=2.69.1=hfff2838_2
+  - graphite2=1.3.14=he9d5cce_1
+  - graphviz=2.50.0=h196fa6a_0
+  - gts=0.7.6=h2684ab5_0
+  - harfbuzz=4.3.0=h3f129a2_0
+  - icu=58.2=h0a44026_1000
   - idna=3.4=pyhd8ed1ab_0
   - ipykernel=6.19.4=pyh736e0ef_0
   - ipython=8.8.0=pyhd1c38e8_0
@@ -51,16 +70,21 @@ dependencies:
   - libcxx=14.0.6=hccf4f1f_0
   - libdeflate=1.8=h9ed2024_5
   - libffi=3.4.2=hecd8cb5_6
+  - libgd=2.3.3=he7e2580_1
   - libgfortran=5.0.0=11_3_0_h97931a8_27
   - libgfortran5=11.3.0=h082f757_27
+  - libiconv=1.17=hac89ed1_0
   - liblapack=3.9.0=16_osx64_openblas
   - libopenblas=0.3.21=openmp_h429af6e_3
   - libpng=1.6.37=ha441bb4_0
+  - librsvg=2.54.4=h52d90eb_0
   - libsodium=1.0.18=hbcb3906_1
   - libtiff=4.4.0=h2cd0358_2
+  - libtool=2.4.7=hf0c8a7f_0
   - libwebp=1.2.4=hfa4350a_0
   - libwebp-base=1.2.4=h775f41a_0
   - libxgboost=1.7.1=cpu_h0c1cf5f_0
+  - libxml2=2.9.14=hbf8cd5e_0
   - llvm-openmp=15.0.6=h61d9ccf_0
   - lz4-c=1.9.3=he49afe7_1
   - matplotlib-base=3.6.2=py310he725631_0
@@ -70,15 +94,19 @@ dependencies:
   - nest-asyncio=1.5.6=pyhd8ed1ab_0
   - numpy=1.23.5=py310he50c29a_0
   - numpy-base=1.23.5=py310h992e150_0
-  - openssl=1.1.1s=hca72f7f_0
+  - openssl=1.1.1s=hfd90126_1
   - packaging=22.0=pyhd8ed1ab_0
   - pandas=1.5.2=py310hecf8f37_0
+  - pango=1.50.7=h80fe9ab_0
   - parso=0.8.3=pyhd8ed1ab_0
+  - pcre=8.45=he49afe7_0
   - pexpect=4.8.0=pyh1a96a4e_2
   - pickleshare=0.7.5=py_1003
   - pillow=9.3.0=py310h81888ad_1
   - pip=22.3.1=py310hecd8cb5_0
+  - pixman=0.38.0=h01d97ff_1003
   - platformdirs=2.6.2=pyhd8ed1ab_0
+  - plotly=5.13.0=pyhd8ed1ab_0
   - pooch=1.6.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.36=pyha770c72_0
   - psutil=5.9.4=py310h90acd4f_0
@@ -92,6 +120,7 @@ dependencies:
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.10.8=h218abb5_1
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-graphviz=0.20.1=pyh22cad53_0
   - python-slugify=7.0.0=pyhd8ed1ab_0
   - python_abi=3.10=2_cp310
   - pytz=2022.7=pyhd8ed1ab_0
@@ -105,6 +134,7 @@ dependencies:
   - sklearn-contrib-lightning=0.6.0=py310hecf8f37_2
   - sqlite=3.40.0=h880c91c_0
   - stack_data=0.6.2=pyhd8ed1ab_0
+  - tenacity=8.1.0=pyhd8ed1ab_0
   - text-unidecode=1.3=py_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tk=8.6.12=h5d9f67b_0
